--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
-title: Welcome to the ICP Network
-subtitle: A network dedicated to the development and promotion of MRI techniques for quantitative imaging of cerebral physiology
+title: ISMRM UK Hub 2024
+subtitle: A UK based in-person meeting for virtual attendees of the 2024 ISMRM meeting in Singapore. 
 ---
